--- a/package-grove/software.config
+++ b/package-grove/software.config
@@ -7,7 +7,7 @@
 ; components ;; common stuff first
 [common shared]
 $;PICARD_TOOLS$;=/usr/local/packages/picard-tools-2.7.1/picard.jar
-$;JAVA_EXEC$;=/usr/local/packages/java-jre-1.8.0/bin/java
+$;JAVA_EXEC$;=/usr/bin/java
 $;GATK_BIN$;= /usr/local/packages/gatk-3.7/
 $;SAMTOOLS_BIN$;=/opt/samtools/bin/
 $;ANNOVAR_BIN$;=/usr/local/packages/annovar/
