--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -18,8 +18,10 @@ $;JAVA_EXEC$;=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
 $;DB_DIR$;=/local/db/
 $;NCBI_BLAST_NT$; = nt
 
-$;METAZOA_ACC_LIST$; = $;DB_DIR$;/metazoa.accession.txt
-$;BACTERIA_ACC_LIST$; = $;DB_DIR$;/bacteria.accession.txt
+;;$;METAZOA_ACC_LIST$; = $;DB_DIR$;/metazoa.accession.txt
+;;$;BACTERIA_ACC_LIST$; = $;DB_DIR$;/bacteria.accession.txt
+$;METAZOA_ACC_LIST$; = /home/sadkins/metazoa.accession.txt
+$;BACTERIA_ACC_LIST$; = /home/sadkins/bacteria.accession.txt
 
 [component filter_dups_lc_seqs]
 $;PRINSEQ_EXEC$;=/opt/packages/prinseq/prinseq-lite.pl
